# Malta

./: .clang-format  .gitignore  CMakeLists.txt  build_web.bat  debug.html  index.html  prod.html
ShaderCompiler/: CMakeLists.txt  build_shader.js
asset_sources/: night-hero-background.pdn  wind-map.pdn
src/: main.cpp  sokol.cpp  sokol.hpp
src/shaders/: quad.glsl
